--- a/css/quadrado/quadrado.css
+++ b/css/quadrado/quadrado.css
@@ -2,7 +2,7 @@
     border: 2px solid #73AD21;
     border-top-left-radius: 0px 0px;
     width: 600px;
-    height: 450px;  
+    height: 600px;  
     margin: 0 auto;
     margin-top: 125px;
     position: relative;
@@ -16,26 +16,26 @@
 }
 #bottom{
   position: absolute;
-  top: 444px;
-  left: -2px;
-  width: 600px;
+  top: 594px;
+  left: -4px;
+  width: 608px;
   transform: rotate(180deg);
 }
 
 #left{
   position: absolute;
   transform: rotate(-90deg);
-  top: 214px;
-  left: -237px;
-  width: 462px;
+  top: 289px;
+  left: -312px;
+  width: 613px
 }
 
 #right{
   position: absolute;
   transform: rotate(90deg);
-  top: 214px;
-  left: 374px;
-  width: 455px;
+  top: 285px;
+  left: 296px;
+  width: 613px;
 }
 
 .conteiner{
